--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -127,3 +127,22 @@
 }
 
 
+@online{modpot,
+  title = {Modulares {{Potenzieren}}},
+  shorttitle = {Modulares {{Potenzieren}}},
+  urldate = {2020-11-07},
+  url = {https://medienwissenschaft.uni-bayreuth.de/inik/material/email_nur_fuer_dich/3_verschluesseln/3.3_asymmetrisch_verschluesseln/Modulares%20Potenzieren%20-%20AB.pdf}
+}
+
+@book{bronstejn2016,
+  title = {Taschenbuch der Mathematik},
+  author = {Bron\v{s}tejn, Il'ja N. and Semendjaev, Konstantin A. and Musiol, Gerhard and Mühlig, Heiner},
+  date = {2016},
+  edition = {10., überarbeitete Auflage},
+  publisher = {{Verlag Europa-Lehrmittel - Nourney, Vollmer GmbH \& Co. KG}},
+  location = {{Haan-Gruiten}},
+  isbn = {978-3-8085-5789-1},
+  langid = {german},
+  pagetotal = {1233},
+  series = {Edition Harri Deutsch}
+}
