--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -146,3 +146,10 @@
   pagetotal = {1233},
   series = {Edition Harri Deutsch}
 }
+
+@online{zum2020,
+  title = {Der {{RSA}} - {{Algorithmus}}},
+  url = {https://www.zum.de/Faecher/Inf/RP/infschul/kr_rsa.html},
+  urldate = {2020-11-08},
+  file = {D\:\\Dokumente\\zotero_bib\\storage\\RK5K2M9J\\kr_rsa.html}
+}
