--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -151,5 +151,16 @@
   title = {Der {{RSA}} - {{Algorithmus}}},
   url = {https://www.zum.de/Faecher/Inf/RP/infschul/kr_rsa.html},
   urldate = {2020-11-08},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\RK5K2M9J\\kr_rsa.html}
+}
+
+@online{erweA,
+  title = {Der Erweiterte Euklidische {{Algorithmus}}},
+  url = {https://www.mathe-online.at/materialien/Franz.Embacher/files/RSA/Euklid.html},
+  urldate = {2020-11-08},
+}
+
+@online{matbib-eka,
+  title = {Euklidischer {{Algorithmus}} - {{Mathebibel}}.De},
+  url = {https://www.mathebibel.de/euklidischer-algorithmus},
+  urldate = {2020-11-08},
 }
