--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -155,12 +155,13 @@
 
 @online{erweA,
   title = {Der Erweiterte Euklidische {{Algorithmus}}},
+  author = {Embacher, Franz},
   url = {https://www.mathe-online.at/materialien/Franz.Embacher/files/RSA/Euklid.html},
   urldate = {2020-11-08},
 }
 
 @online{matbib-eka,
-  title = {Euklidischer {{Algorithmus}} - {{Mathebibel}}.De},
+  title = {Euklidischer {{Algorithmus}} - {{Mathebibel}}},
   url = {https://www.mathebibel.de/euklidischer-algorithmus},
   urldate = {2020-11-08},
 }
