--- a/inc/style.tex
+++ b/inc/style.tex
@@ -15,6 +15,7 @@
 
 
 \usepackage{graphicx} % Paket für Einbindung von Bildern
+\usepackage{subcaption} % Paket für subfigures
 
 \usepackage[german=guillemets]{csquotes} % sehr schöne Anführungszeichen
 
