--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -165,3 +165,20 @@
   url = {https://www.mathebibel.de/euklidischer-algorithmus},
   urldate = {2020-11-08},
 }
+
+@online{httpsblog,
+  title = {How {{Does HTTPS Work}}? {{RSA Encryption Explained}} « {{TipTopSecurity}}},
+  shorttitle = {How {{Does HTTPS Work}}?},
+  url = {https://tiptopsecurity.com/how-does-https-work-rsa-encryption-explained/},
+  urldate = {2020-11-08},
+  langid = {american}
+}
+
+@online{zotero-48,
+  title = {RSA-Verschlüsselung leicht erklärt ¦ datenschutz.org},
+  journaltitle = {Datenschutz},
+  url = {https://www.datenschutz.org/rsa-verschluesselung/},
+  urldate = {2020-11-08},
+  abstract = {Infos zur RSA-Verschlüsselung},
+  langid = {german}
+}
