--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -182,3 +182,12 @@
   abstract = {Infos zur RSA-Verschlüsselung},
   langid = {german}
 }
+
+@online{wiedmann,
+  title = {Cloud Security News},
+  author = {Wiedmann, Florian},
+  journaltitle = {it-daily.net},
+  url = {https://www.it-daily.net/it-sicherheit/cloud-security/25680-bedeuten-quantencomputer-das-ende-der-kryptographie},
+  urldate = {2020-11-08},
+  langid = {german}
+}
