--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -137,25 +137,25 @@
         Um die bei einem \emph{asymmetrischen Verschlüsselungsverfahren} nötigen beiden Schlüssel zu erzeugen müssen zuerst zwei unterschiedliche Primzahlen $p$ und $q$ erzeugt werden.(Vgl. \cite[278]{dankmeier2006}) Aus diesen wird dann das Produkt $n=p\cdot q$, den \emph{Modul}, gebildet. Für die Funktionalität des Verfahrens spielt die größe der verwendeten Primzahlen keine Rolle, allerdings sinkt mit steigender Größe die Gefahr des \enquote{Aufbrechens} durch einen Unbefugten, da die Sicherheit der RSA-Verschlüsselung auf dem \emph{Faktorisierungsproblem} beruht. Dies ist \enquote{das bisher ungelöste Problem der schnellen Zerlegung großer Zahlen in ihre Primfaktoren, die Aufgabe hat eine exponentielle Komplexität.}\footcite[279]{dankmeier2006} Dadurch ist es bei den heute verwendten 100- bis 350-stelligen mit aktuellen Methoden und Rechenleistung nicht möglich aus $n$ die zugrundeliegenden Primzahlen $p$ und $q$ zu berechnen. %TODO möglichkeiten um große Primzahlen zu erstellen im nachfolgenden Kapitel, warum überhaupt Primzahlen?
         Zusätzlich zu $n$ muss auch noch die \emph{Eulersche Phi-Funktion} von $n$ gebildet werden.
         \subsubsection{Eulersche Phi-Funktion}
-            Die Eulersche $\Phi$-Funktion $\Phi(n)$ bezeichnet die Menge der zu $n$ \emph{teilerfremden} Zahlen $a$ von $1$ bis $n-1$.\footcite[Vgl.][111]{swoboda2008kryptographie}
+            Die Eulersche $\varphi$-Funktion $\varphi(n)$ bezeichnet die Menge der zu $n$ \emph{teilerfremden} Zahlen $a$ von $1$ bis $n-1$.\footcite[Vgl.][111]{swoboda2008kryptographie}
             \begin{equation}
-                \Phi(n)= |\{a\in \left[ 1, n-1 \right] | \ggt(n, a)=1\}|
+                \varphi(n)= |\{a\in \left[ 1, n-1 \right] | \ggt(n, a)=1\}|
             \end{equation}
-            \enquote{Da alle Primzahlen $p$ nur durch 1 und sich selbst teilbar sind, sind sie sicher zu den Zahlen 1 bis $p-1$ teilerfremd, daher ist $\Phi(p) = p-1$.}\footcite{steinfeld}
+            \enquote{Da alle Primzahlen $p$ nur durch 1 und sich selbst teilbar sind, sind sie sicher zu den Zahlen 1 bis $p-1$ teilerfremd, daher ist $\varphi(p) = p-1$.}\footcite{steinfeld}
             Da $n$ das Produkt zweier verschiedener Primzahlen und somit teilerfremder natürlicher Zahlen ist, gilt die \emph{Multiplikativität}\footcite[Vgl.][]{steinfeld}:
             \begin{equation}
-                \Phi(n) = \Phi(pq) = \Phi(p)\cdot\Phi(q)
+                \varphi(n) = \varphi(pq) = \varphi(p)\cdot\varphi(q)
             \end{equation}
-            Für $\Phi(p) = p-1$ und $\Phi(q) = q-1$ ergibt sich also\footcite[Vgl.][279]{dankmeier2006}:
+            Für $\varphi(p) = p-1$ und $\varphi(q) = q-1$ ergibt sich also\footcite[Vgl.][279]{dankmeier2006}:
             \begin{equation}
-                \Phi(n) = (p-1)\cdot(q-1)
+                \varphi(n) = (p-1)\cdot(q-1)
             \end{equation}
         \subsubsection{Das modulare Inverse} %TODO #6 noch ausführlicher (wat40 & dank44) & ind. Zitat
-            \enquote{Des weiteren [wird] eine zu $\Phi(n)$ teilerfremde Zufallszahl $e$ [($1<e<\Phi(n)$)]\footcite[71]{watjen2008} [gewählt] und [...] hierzu die \emph{modulare inverse} Zahl $d$ bezüglich $\Phi(n)$ [berechnet]. Für $d$ gilt:}\footcite[279]{beutelspacher2015}
+            \enquote{Des weiteren [wird] eine zu $\varphi(n)$ teilerfremde Zufallszahl $e$ [($1<e<\varphi(n)$)]\footcite[71]{watjen2008} [gewählt] und [...] hierzu die \emph{modulare inverse} Zahl $d$ bezüglich $\varphi(n)$ [berechnet]. Für $d$ gilt:}\footcite[279]{beutelspacher2015}
             \begin{equation}
-                d\cdot e\mod{\Phi(n)} = 1 \label{eq:modinv}
+                d\cdot e\mod{\varphi(n)} = 1 \label{eq:modinv}
             \end{equation}
-            Da $e$ und $\Phi(n)$ teilerfremd sind, gibt es hierfür eine Lösung\footcite[Vgl.][77, 164]{ertel2003}. Dieses
+            Da $e$ und $\varphi(n)$ teilerfremd sind, gibt es hierfür eine Lösung\footcite[Vgl.][77, 164]{ertel2003}. Dieses
             \enquote{$d$ kann berechnet werden mit dem \emph{erweiterten Euklidischen Algorithmus}.}\footcite[77]{ertel2003}
 
         \paragraph{Der erweiterte Euklidische Algorithmus} %FIXME Section draus machen
@@ -200,7 +200,7 @@
                 \item[Der öffentliche Schlüssel ($P$)] besteht aus dem Paar $P=(e, n)$ und wird allen Personen, von denen der Besitzer Informationen erhalten will, zugänglich gemacht. Hier wird auch erkenntlich, weshalb es so wichtig ist, dass $n$ nicht leicht in seine Primfaktoren zerlegt werden kann, denn wenn es einem Angreifer gelingen sollte diese ausfindig zu machen könnte er damit den \emph{privaten Schlüssel} berechnen und alle (abgefangenen) Nachrichten zu entschlüsseln.
                 \item[Der geheime Schlüssel ($S$)] wetzt sich aus $S=(d, n)$ zusammen und sollte nur dem Besitzer bekannt sein. 
             \end{description}
-            Da die Schlüsselerzeugung meist von einer Schlüsselvergabestelle, wie z.B. dem Anbieter Sofortnachrichtendienstes, sollte dieser nach Berechnung der Schlüssel die Primzahlen $p$ und $q$, sowie das Ergebnis der zugehörigen Eulerfunktion $\Phi(n)$ löschen, damit auch im Falle einer Kompromittierung der Server dessen die Privatsphäre der Nutzer geschützt ist.\footcite[279]{dankmeier2006} %CHECK Grammatik "Server dessen" oder Bezug auf Vergabestelle? %TODO Ablaufschema: Cryptool oder tikz
+            Da die Schlüsselerzeugung meist von einer Schlüsselvergabestelle, wie z.B. dem Anbieter Sofortnachrichtendienstes, sollte dieser nach Berechnung der Schlüssel die Primzahlen $p$ und $q$, sowie das Ergebnis der zugehörigen Eulerfunktion $\varphi(n)$ löschen, damit auch im Falle einer Kompromittierung der Server dessen die Privatsphäre der Nutzer geschützt ist.\footcite[279]{dankmeier2006} %CHECK Grammatik "Server dessen" oder Bezug auf Vergabestelle? %TODO Ablaufschema: Cryptool oder tikz
 
     \subsection{Ver- und Entschlüsselungs Algorithmus}
             Möchte Bob nun eine chiffrierte Nachricht an Alice verschicken, muss er folgendermaßen vorgehen (Vgl. \cite[71]{watjen2008}):
@@ -266,29 +266,29 @@
             \left(M^{e}\mod{n}\right)^{d}\mod{n} = K^{ed}\mod{n} \label{eq:ked}
         \end{equation}
         (Eine kurze Erklärung der verwendten Rechenregeln lässt sich hier finden: \cite{modpot})
-        Da das modulare Inverse $d$ in \ref{eq:modinv} als $ed\mod{\Phi(n)}=1$ bestimmt wurde, gilt nach Einführung des ganzzahligen Faktors $k$:\footcite[Vgl.][72]{watjen2008}
+        Da das modulare Inverse $d$ in \ref{eq:modinv} als $ed\mod{\varphi(n)}=1$ bestimmt wurde, gilt nach Einführung des ganzzahligen Faktors $k$:\footcite[Vgl.][72]{watjen2008}
         \begin{equation}
-            e\cdot d = k\cdot \Phi(n)+1
+            e\cdot d = k\cdot \varphi(n)+1
         \end{equation}
         Zusammen mit \ref{eq:ked} resultiert das in folgender Gleichung, die es zu beweisen gilt:\footcite[Vgl.][282]{dankmeier2006}
         \begin{equation}
-           M = M^{k\Phi(n)+1}\mod{n} = M\cdot M^{k\Phi(n)}\mod{n}
+           M = M^{k\varphi(n)+1}\mod{n} = M\cdot M^{k\varphi(n)}\mod{n}
         \end{equation}
         Sind nun $M$ und $n$ teilerfremd, kann der \emph{Satz von Fermat-Euler} benutzt werden, um den Beweis zu erbringen. Nach \cite[390]{bronstejn2016} lautet dieser auf den vorliegenden Fall bezogen:
         \begin{equation}
-            M^{\Phi(n)} \mod{n} = 1
+            M^{\varphi(n)} \mod{n} = 1
         \end{equation}
         Mit
         \begin{equation}
-            M^{k \cdot \Phi(n)} \mod{n} = \left(M^{\Phi(n)\mod{n}}\right)^{k} \mod{n} = 1^{k}\mod{n} = 1
+            M^{k \cdot \varphi(n)} \mod{n} = \left(M^{\varphi(n)\mod{n}}\right)^{k} \mod{n} = 1^{k}\mod{n} = 1
         \end{equation}
         und
         \begin{align}
-            M\cdot M^{k\Phi(n)}\mod{n} &= \left(M\mod{n}\cdot M^{k\Phi(n)}\mod{n}\right)\mod{n}\\
+            M\cdot M^{k\varphi(n)}\mod{n} &= \left(M\mod{n}\cdot M^{k\varphi(n)}\mod{n}\right)\mod{n}\\
              &= M\mod{n}\mod{n} = M \notag
         \end{align}
         da $M < n$ und somit $M\mod{n}$ wieder $M$ ergibt,
-        ist $M = M^{k\Phi(n)+1}\mod{n}$, was zu beweisen war, bewiesen.\\
+        ist $M = M^{k\varphi(n)+1}\mod{n}$, was zu beweisen war, bewiesen.\\
         Für den Randfall, dass $M$ nicht teilerfremd zu $n$ ist, sondern ein Vielfaches von $q$ oder $p$ ist, ist ebenfalls ein Beweis vorhanden, diesen hier aufzuführen würde jedoch den Rahmen sprengen, es soll jedoch gesagt werden, dass er teilweise auf dem eben beschriebenen Vorgehen basiert.
         
     \subsection{Bewertung} \label{sec:bewertung}
@@ -309,4 +309,3 @@
 
 \end{document}
 % TODO Phi klein schreiben du Vollidiot
-%FIXME Abstand von mod verkleinern?
